Atualiza configs e Gradle para rodar o servidor em OpenJDK 21 (no qual virtual threads não são mais uma preview feature)