@@ -14,8 +14,8 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest:2.2'
 }
 java {
-    sourceCompatibility = JavaVersion.VERSION_19
-    targetCompatibility = JavaVersion.VERSION_19
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
 test {
@@ -31,16 +31,4 @@ tasks.jar {
     from(project(':core').fileTree("build/classes/java/main")) {
         include '**/*.class'
     }
-}
-
-tasks.withType(JavaCompile) {
-    options.compilerArgs += '--enable-preview'
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs += '--enable-preview'
-}
-
-compileJava {
-    options.compilerArgs += ["--enable-preview"]
 }
